[tool.poetry]
name = "openvoice"
version = "0.1.0"
description = ""
authors = ["intoffset <4951782+intoffset@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
librosa = "0.9.1"
faster-whisper = "0.9.0"
pydub = "0.25.1"
wavmark = "0.0.3"
numpy = "1.22.0"
eng-to-ipa = "0.0.2"
inflect = "7.0.0"
unidecode = "1.3.7"
whisper-timestamped = "1.14.2"
openai = "^1.24.0"
python-dotenv = "^1.0.1"
pypinyin = "0.50.0"
cn2an = "0.5.22"
jieba = "0.42.1"
gradio = "3.48.0"
langid = "1.1.6"
urllib3 = "~1.25"
boto3 = "1.34.94"
melotts = {git = "https://github.com/myshell-ai/MeloTTS.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
